Closed Bug 1265601 Opened 8 years ago Closed 8 years ago

OdinMonkey: MIPS: Fix i64 testing infrastructure in Baldr

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

Fix build errors that caused by Bug 1262402 on MIPS.
Comment on attachment 8742614 [details] [diff] [review]
0001-Bug-1265601-OdinMonkey-MIPS-Fix-i64-testing-infrastr.patch

Review of attachment 8742614 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks, and sorry about the breakage.
Attachment #8742614 - Flags: review?(bbouvier) → review+
https://hg.mozilla.org/mozilla-central/rev/fd6f37cd30b2
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: