Bug 1265601 - OdinMonkey: MIPS: Fix i64 testing infrastructure in Baldr. r=bbouvier

---
 js/src/jit/mips32/Assembler-mips32.h      | 1 +
 js/src/jit/mips32/MacroAssembler-mips32.h | 5 -----
 js/src/jit/mips64/Assembler-mips64.h      | 1 +
 3 files changed, 2 insertions(+), 5 deletions(-)